# Crop_Production

./: 3210001301-eng.csv  README.md  crop_production.ipynb  pyproject.toml
